--- a/Cennik.html
+++ b/Cennik.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">website design templates</a></section><section class="counters6 counters cid-rLbFj9Chcm" id="counters6-l">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own site</a></section><section class="counters6 counters cid-rLbFj9Chcm" id="counters6-l">
 
     
 
