create github pages

--- a/NeQ Pack.html
+++ b/NeQ Pack.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="step3 cid-rL8zkxFHyS" id="step3-j">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="step3 cid-rL8zkxFHyS" id="step3-j">
 
     
 
