--- a/Sklep.html
+++ b/Sklep.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-section article content10 cid-rL8mGaiCbc" id="content10-h">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="mbr-section article content10 cid-rL8mGaiCbc" id="content10-h">
     
      
 
